--- a/deep-presentation-client/pyproject.toml
+++ b/deep-presentation-client/pyproject.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 description = ""
 authors = ["Jakub Melzacki <melzacki.jakub@gmail.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
+streamlit = "^1.38.0"
 
 
 [build-system]
