--- a/deep-presentation-api/pyproject.toml
+++ b/deep-presentation-api/pyproject.toml
@@ -7,7 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-
+requests = "^2.32.3"
+uvicorn = "^0.31.0"
+fastapi = "^0.115.0"
+python-multipart = "^0.0.11"
+librosa = "^0.10.2.post1"
+pillow = "^10.4.0"
 
 [build-system]
 requires = ["poetry-core"]
