--- a/deep-presentation-api/pyproject.toml
+++ b/deep-presentation-api/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = "^0.115.0"
 python-multipart = "^0.0.11"
 librosa = "^0.10.2.post1"
 pillow = "^10.4.0"
+deepface = "^0.0.93"
 
 [build-system]
 requires = ["poetry-core"]
