add deepface dependency

--- a/deep-presentation-api/pyproject.toml
+++ b/deep-presentation-api/pyproject.toml
@@ -14,6 +14,7 @@ python-multipart = "^0.0.11"
 librosa = "^0.10.2.post1"
 pillow = "^10.4.0"
 deepface = "^0.0.93"
+tf-keras = "^2.17.0"
 
 [build-system]
 requires = ["poetry-core"]
