--- a/deep-presentation-client/pyproject.toml
+++ b/deep-presentation-client/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 streamlit = "^1.38.0"
 python-dotenv = "^1.0.1"
 requests = "^2.32.3"
+streamlit-player = "^0.1.5"
 
 
 [build-system]
