--- a/deep-presentation-client/pyproject.toml
+++ b/deep-presentation-client/pyproject.toml
@@ -11,6 +11,7 @@ streamlit = "^1.38.0"
 python-dotenv = "^1.0.1"
 requests = "^2.32.3"
 streamlit-player = "^0.1.5"
+matplotlib = "^3.9.2"
 
 
 [build-system]
