--- a/deep-presentation-api/pyproject.toml
+++ b/deep-presentation-api/pyproject.toml
@@ -17,6 +17,7 @@ deepface = "^0.0.93"
 tf-keras = "^2.17.0"
 openai = "^1.50.2"
 sentence-transformers = "^3.1.1"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
