--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   client:
+    image: localhost/deep-presentation-client:latest
     build:
       context: ./deep-presentation-client   # Path to your frontend Dockerfile
     ports:
@@ -12,6 +13,7 @@ services:
       - API_URL=http://api:8080
       - VIDEO_STORAGE=/app/shared
   api:
+    image: localhost/deep-presentation-api:latest
     build:
       context: ./deep-presentation-api    # Path to your backend Dockerfile
     ports:
@@ -23,6 +25,7 @@ services:
       - WHISPERX_API=http://whisperx_api:8081
       - VIDEO_STORAGE=/app/shared
   whisperx_api:
+    image: localhost/deep-presentation-whisperx:latest
     build:
       context: ./whisperx-fin    # Path to your backend Dockerfile
     ports:
