--- a/whisperx-fin/Dockerfile
+++ b/whisperx-fin/Dockerfile
@@ -21,6 +21,7 @@ COPY requirements.txt .
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN pip install whisperx
 # Copy the rest of the application code
 COPY . .
 
