--- a/deep-presentation-client/pyproject.toml
+++ b/deep-presentation-client/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.0.1"
 requests = "^2.32.3"
 streamlit-player = "^0.1.5"
 matplotlib = "^3.9.2"
+plotly = "^5.24.1"
 
 
 [build-system]
