add spacy and spacy module to docker and toml

--- a/deep-presentation-api/pyproject.toml
+++ b/deep-presentation-api/pyproject.toml
@@ -20,6 +20,7 @@ openai = "^1.50.2"
 sentence-transformers = "^3.1.1"
 python-dotenv = "^1.0.1"
 nltk = "^3.9.1"
+spacy = "^3.7.6"
 
 [build-system]
 requires = ["poetry-core"]
