--- a/deep-presentation-api/Dockerfile
+++ b/deep-presentation-api/Dockerfile
@@ -22,6 +22,10 @@ COPY requirements.txt .
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN pip install spacy
+
+RUN python -m spacy download pl_core_news_sm
+
 # Copy the rest of the application code
 COPY . .
 
