--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - ./shared:/app/shared:rw # Mounts shared directory to /app/shared in backend container
     environment:
       - OPENAI_API_KEY=sk-...
-      - WHISPERX_API=http://whisperx_api:8081
+      - WHISPERX_API=http://139.162.183.157:8081
       - VIDEO_STORAGE=/app/shared
   whisperx_api:
     image: localhost/deep-presentation-whisperx:latest
