Udpdated fog and ease

--- a/deep-presentation-api/Dockerfile
+++ b/deep-presentation-api/Dockerfile
@@ -25,6 +25,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 RUN pip install spacy
 
 RUN python -m spacy download pl_core_news_sm
+RUN pip install textstat
 
 # Copy the rest of the application code
 COPY . .
